samples/_failures_safe/1761444632_526325_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c6c9e787.c: In function ‘main’:
./samples/SAFE/__tmp_c6c9e787.c:148:19: error: missing terminating " character
  148 |         if (scanf("%d
      |                   ^~~
./samples/SAFE/__tmp_c6c9e787.c:148:9: error: expected expression at end of input
  148 |         if (scanf("%d
      |         ^~
./samples/SAFE/__tmp_c6c9e787.c:148:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c6c9e787.c:148:9: error: expected declaration or statement at end of input
